# 2a21-smart-examination-distribution-center

./: CMakeLists.txt  README.md  centre_examen.cpp  centre_examen.h  connection.cpp  employer.cpp  employer.h  image_first.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test
